# GSSS-SEP-24-Batch2-CSE-C

./: CMakeLists.txt  main.c
Arrays/: BubbleSort.c  LinearSearch.c  MaxMinInArray.c  MergeTwoArrays.c  MultiplyTwoMatrices.c  RotateMatrix90Degrees.c
Conditionals/: IfElseStatements.c  LeapYear.c  SwitchCase.c  VowelCheck.c
DMA/: WhyDMA.c
Files/: ReadFile.c  WriteFile.c  demo.txt  gsss.txt
Functions/: BasicFunction.c  FactorialRec.c  FibonacciRec.c  HammingWeight.c  PrimeInIntervals.c  ZigZag.c
Loops/: ArmstrongNumbers.c  DoWhileLoop.c  Factorial.c  ForLoop.c  Heart.c  PalindromeNumber.c  WhileLoop.c  ZeroOnePattern.c
PointersAndArrayPointers/: BasicPointers.c  DanglingPointers.c  MaxInArrayUsingPointers.c  ReverseArrayUsingPointers.c  SwapTwoNumbers.c
Strings/: Palindrome.c  PrintFirstLetterOfEachWord.c  RemoveDuplicates.c  SortArrayOfNames.c  SwapTwoStrings.c
