cmake_minimum_required(VERSION 3.23)
project(GSSS_SEP_CSE_B2 C)

set(CMAKE_C_STANDARD 23)

add_executable(GSSS_SEP_CSE_B2 main.c)
add_executable(GSSS_SEP_CSE_B2_0 Conditionals/IfElseStatements.c)
add_executable(GSSS_SEP_CSE_B2_1 Conditionals/VowelCheck.c)
add_executable(GSSS_SEP_CSE_B2_2 Conditionals/LeapYear.c)
add_executable(GSSS_SEP_CSE_B2_3 Conditionals/SwitchCase.c)
add_executable(GSSS_SEP_CSE_B2_4 Loops/WhileLoop.c)
add_executable(GSSS_SEP_CSE_B2_5 Loops/DoWhileLoop.c)
add_executable(GSSS_SEP_CSE_B2_6 Loops/ForLoop.c)
add_executable(GSSS_SEP_CSE_B2_7 Loops/Factorial.c)
add_executable(GSSS_SEP_CSE_B2_8 Loops/PalindromeNumber.c)
add_executable(GSSS_SEP_CSE_B2_9 Loops/ZeroOnePattern.c)
add_executable(GSSS_SEP_CSE_B2_10 Loops/ArmstrongNumbers.c)
add_executable(GSSS_SEP_CSE_B2_11 Loops/Heart.c)
add_executable(GSSS_SEP_CSE_B2_12 Functions/BasicFunction.c)
add_executable(GSSS_SEP_CSE_B2_13 Functions/HammingWeight.c)
add_executable(GSSS_SEP_CSE_B2_14 Functions/PrimeInIntervals.c)
add_executable(GSSS_SEP_CSE_B2_15 Functions/FactorialRec.c)
add_executable(GSSS_SEP_CSE_B2_16 Functions/FibonacciRec.c)
add_executable(GSSS_SEP_CSE_B2_17 Functions/ZigZag.c)
add_executable(GSSS_SEP_CSE_B2_18 Arrays/MaxMinInArray.c)
add_executable(GSSS_SEP_CSE_B2_19 Arrays/MergeTwoArrays.c)
add_executable(GSSS_SEP_CSE_B2_20 Arrays/LinearSearch.c)
add_executable(GSSS_SEP_CSE_B2_21 Arrays/BubbleSort.c)
add_executable(GSSS_SEP_CSE_B2_22 Arrays/RotateMatrix90Degrees.c)
add_executable(GSSS_SEP_CSE_B2_23 Arrays/MultiplyTwoMatrices.c)
add_executable(GSSS_SEP_CSE_B2_24 PointersAndArrayPointers/BasicPointers.c)
add_executable(GSSS_SEP_CSE_B2_25 PointersAndArrayPointers/SwapTwoNumbers.c)
add_executable(GSSS_SEP_CSE_B2_26 PointersAndArrayPointers/DanglingPointers.c)
add_executable(GSSS_SEP_CSE_B2_27 PointersAndArrayPointers/MaxInArrayUsingPointers.c)
add_executable(GSSS_SEP_CSE_B2_28 PointersAndArrayPointers/ReverseArrayUsingPointers.c)
add_executable(GSSS_SEP_CSE_B2_29 Strings/SwapTwoStrings.c)
add_executable(GSSS_SEP_CSE_B2_30 Strings/Palindrome.c)
add_executable(GSSS_SEP_CSE_B2_31 Strings/RemoveDuplicates.c)
add_executable(GSSS_SEP_CSE_B2_32 Strings/SortArrayOfNames.c)
add_executable(GSSS_SEP_CSE_B2_33 Strings/PrintFirstLetterOfEachWord.c)
add_executable(GSSS_SEP_CSE_B2_34 DMA/WhyDMA.c)
add_executable(GSSS_SEP_CSE_B2_35 Files/ReadFile.c)
add_executable(GSSS_SEP_CSE_B2_36 Files/WriteFile.c)